--- a/cdk/package.json
+++ b/cdk/package.json
@@ -1,29 +1,34 @@
 {
-  "name": "spring-boot-dolap",
+  "name": "cdk",
   "version": "0.1.0",
   "bin": {
-    "spring-boot-dolap": "bin/spring-boot-dolap.js"
+    "cdk": "bin/dolap.js"
   },
   "scripts": {
     "build": "tsc",
     "watch": "tsc -w",
     "test": "jest",
-    "cdk": "cdk"
+    "cdk": "cdk",
+    "deploy": "cdk deploy --require-approval never"
   },
   "devDependencies": {
-    "aws-cdk": "1.45.0",
     "@aws-cdk/assert": "1.45.0",
     "@types/jest": "^25.2.1",
     "@types/node": "10.17.5",
+    "aws-cdk": "1.45.0",
     "jest": "^25.5.0",
     "ts-jest": "^25.3.1",
     "ts-node": "^8.1.0",
     "typescript": "~3.7.2"
   },
   "dependencies": {
+    "@aws-cdk/aws-ec2": "^1.46.0",
+    "@aws-cdk/aws-ecs": "^1.46.0",
+    "@aws-cdk/aws-elasticloadbalancingv2": "^1.46.0",
     "@aws-cdk/aws-sns": "1.45.0",
     "@aws-cdk/aws-sns-subscriptions": "1.45.0",
     "@aws-cdk/aws-sqs": "1.45.0",
-    "@aws-cdk/core": "1.45.0"
+    "@aws-cdk/core": "1.45.0",
+    "dotenv": "^8.2.0"
   }
 }
