--- a/cdk/package.json
+++ b/cdk/package.json
@@ -22,13 +22,10 @@
     "typescript": "~3.7.2"
   },
   "dependencies": {
-    "@aws-cdk/aws-ec2": "^1.46.0",
-    "@aws-cdk/aws-ecs": "^1.46.0",
-    "@aws-cdk/aws-elasticloadbalancingv2": "^1.46.0",
-    "@aws-cdk/aws-sns": "1.45.0",
-    "@aws-cdk/aws-sns-subscriptions": "1.45.0",
-    "@aws-cdk/aws-sqs": "1.45.0",
-    "@aws-cdk/core": "1.45.0",
+    "@aws-cdk/aws-ec2": "1.60.0",
+    "@aws-cdk/aws-ecs": "1.60.0",
+    "@aws-cdk/aws-elasticloadbalancingv2": "1.60.0",
+    "@aws-cdk/core": "1.60.0",
     "dotenv": "^8.2.0"
   }
 }
